# Data-Analytics-frammer

./: .env.example  .gitignore  README.md  alembic.ini  deploy.sh  frammer-backend.service  nginx-frammer.conf  pyproject.toml  requirements-prod.txt  requirements.txt
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_funnel_fields.py  0003_semantic_fields.py  0004_notifications.py  0005_aggregate_tables.py
app/: main.py
app/agent/: __init__.py  audit.py  chart_planner.py  executor.py  llm_planner.py  planner.py  prompts.py  schemas.py  scope.py  service_router.py  sql_compiler.py  summarizer.py  validator.py
app/api/: deps.py
app/api/v1/: analytics.py  anomalies.py  auth.py  channels.py  clients.py  diagnostics_analytics.py  diagnostics_backlog.py  dimensions.py  forecast.py  funnel.py  growth.py  input_types.py  insights.py  internal.py  kpis.py  lag.py  languages.py  monthly.py  notifications.py  (+12 more)
app/core/: config.py  security.py
app/db/: session.py
app/models/: __init__.py  aggregates.py  dimensions.py  facts.py  notifications.py
app/notifications/: alert_rules.py  delivery_log.py  digest_builders.py  email_service.py  ses_client.py  template_renderer.py
app/registry/: __init__.py  dimensions.py  filters.py  metrics.py
app/schemas/: insights.py  notifications.py  responses.py
app/services/: aggregate_support.py  anomaly.py  filters.py  insight_engine.py  insight_llm.py  scoring.py
app/utils/: __init__.py  response.py
scripts/: evaluate_alerts.py  ingest.py  run_digest.py  test_endpoints.py
(+19 files in other folders)
