[tool.poetry]
name = "frammer-backend"
version = "0.1.0"
description = "Frammer AI Analytics Platform – FastAPI Backend"
authors = ["Frammer Team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.135.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
asyncpg = "^0.30.0"
alembic = "^1.14.0"
pydantic = "^2.10.0"
pydantic-settings = "^2.6.0"
python-dotenv = "^1.0.1"
python-multipart = "^0.0.19"
pandas = "^2.2.3"
numpy = "^2.2.0"
httpx = "^0.28.0"
supabase = "^2.10.0"
scipy = "^1.14.0"
statsmodels = ">=0.14.0"
starlette = "^0.52.1"
boto3 = "^1.35.0"
jinja2 = "^3.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
httpx = "^0.28.0"
ruff = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"
